# unitcon

./: .gitignore  .gitmodules  .ocamlformat  Makefile  README.md  call_proposition_parser.py  config.yml  error_summary_parser.py  hierarchy_info_parser.py  modifier_parser.py  run.py  run.sh  setup.sh
src/: ast.ml  calculation.ml  callProposition.ml  callgraph.ml  classInfo.ml  cmdline.ml  commandMaker.ml  constant.ml  constantInfo.ml  dug.ml  dune  enum.ml  errorSummary.ml  generator.ml  generatorAST.ml  generatorDUG.ml  hierarchy.ml  inheritance.ml  language.ml  main.ml  makeTC.ml  modeling.ml  parser.ml  regexp.ml  runAnalysis.ml  runProgram.ml  runProgramAST.ml  runProgramDUG.ml  setter.ml  summary.ml  trace.ml  utils.ml
test/: Main.java  chart-4-summary.json  chart-4-trace.json  directory-trace.json  dune  example1.json  null1.json  summary1.json  test_Main.sh  unit.ml
test/Bears-189-buggy/: Manifest  jar_files  pom.xml  test_files
test/Bears-189-buggy/src/test/java/hu/oe/nik/szfmv/detector/: DetectorTest.java
test/Bears-189-buggy/unitcon_properties/: build_command  call_proposition  call_proposition.json  compile_command  enum_info.json  error_summaries.json  error_summarys  execute_command  inheritance_info.json  java_files  summary.json  test_command  unitcon_build_command
test/Bears-189-buggy/unitcon_tests/: log.txt
test/Main/: Main.java
test/Main/unitcon-properties/: error-summaries.json  summary.json
test/Main/unitcon_properties/: call_proposition.json  class_info.json  constant_info.json  error_summaries.json  expected_bug  summary.json
(+36 files in other folders)
