(rule
 (alias runtest)
 (deps
  (source_tree ../deps)
  (source_tree ../script)
  (source_tree Main)
  test_Main.sh)
 (action
  (progn
   (run ln -sf src/main.exe ../unitcon)
   (run ./test_Main.sh -make-test)
   (system "[ -e Main/unitcon_tests/UnitconTest1.java ]"))))

(test
 (name unit)
 (libraries oUnit))
